# GraphSimViz-backend

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-django-example.env.dev  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: docker-publish.yml
data/: cluster_empirical_pval.py  download_files.sh
graphsimviz_backend/: __init__.py  asgi.py  celery.py  models.py  networks.py  serializers.py  simqt_evaluator.py  task.py  urls.py  views.py  wsgi.py
graphsimviz_backend/management/commands/: setup_gvl.py
graphsimviz_backend/settings/: settings.py
graphsimviz_backend/tasks/: asynchronous.py
gvl_backend/: .gitignore  __init__.py  asgi.py  celery.py  mailer.py  serializers.py  simqt_executor.py  task.py  urls.py  versions.py  views.py  wsgi.py
gvl_backend/management/commands/: setup_gvl.py
gvl_backend/settings/: settings.py
gvl_backend/tasks/: task_hook.py
networks/: download_networks.sh
scripts/: start_celery_beat.sh  start_celery_worker.sh
