[tool.poetry]
name = "graphsimviz_backend"
version = "1.0.0"
description = ""
authors = ["andreas-maier <andreas.maier-1@uni-hamburg.de>"]
package-mode = false

[tool.poetry.dependencies]
python =  ">=3.9.2,<3.14"
djangorestframework = "^3.15.2"
djangorestframework-camel-case= "1.1.2"
cryptography="46.0.5"
entrypoints="0.3"
requests="2.32.4"
django="^4.2.28"
sqlparse="0.5.4"
gunicorn="^23.0.0"
django-cors-headers="3.11.0"
pymemcache="3.5.0"
django_redis="5.2.0"
rq="1.10.1"
celery="5.2.6"
urllib3 = "^2.6.3"
brotli = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"